--- a/HappyRing/WebContent/css/main/main.css
+++ b/HappyRing/WebContent/css/main/main.css
@@ -1,5 +1,5 @@
 
-/* ¿µ¿ª A */
+/* ï¿½ï¿½ï¿½ï¿½ A */
 .divA {
 	padding-right: 12px;
 }
@@ -21,7 +21,7 @@
 }
 
 
-/* ¿µ¿ª B */
+/* ï¿½ï¿½ï¿½ï¿½ B */
 .divB{
 	padding-left: 13px;
 	
@@ -54,11 +54,12 @@ border: solid; border-color: blue;
 
 .b-4{
 	border: solid; border-color: babyblue; margin-top: 25px;
+	height: auto;
 }
 
 
 
-/* ¿µ¿ª C */
+/* ï¿½ï¿½ï¿½ï¿½ C */
 
 .divC{
 	padding-right: 12px;
@@ -77,7 +78,7 @@ border: solid; border-color: blue;
 	height: auto;
 	padding-top: 25px; border: solid; border-color: skyblue;
 }
-/* ¿µ¿ª D */
+/* ï¿½ï¿½ï¿½ï¿½ D */
 
 .divD{
 	padding-left: 13px;
@@ -99,7 +100,7 @@ border: solid; border-color: blue;
 
 
 
-/* main Ã¹¹øÂ° ÅÇ  */
+/* main Ã¹ï¿½ï¿½Â° ï¿½ï¿½  */
 #custom_carousel .item
 {
     color: #fff;
@@ -163,7 +164,7 @@ border: solid; border-color: blue;
 #custom_carousel h4 { padding: 20px; }
 
 
-/*  main Ã¹¹øÂ° ÅÇ contents ¿µ¿ª*/
+/*  main Ã¹ï¿½ï¿½Â° ï¿½ï¿½ contents ï¿½ï¿½ï¿½ï¿½*/
 
 .item {
 
@@ -178,7 +179,7 @@ border: solid; border-color: blue;
     border-radius: 0 0 26px 26px;
 }
 
-/* ¸ÞÀÎ µÎ¹øÂ° ÅÇ */
+/* ï¿½ï¿½ï¿½ï¿½ ï¿½Î¹ï¿½Â° ï¿½ï¿½ */
 
 #custom_carousel2 .item2
 {
@@ -238,7 +239,7 @@ border: solid; border-color: blue;
 #custom_carousel2 h4 { padding: 20px; }	
 
 
-/*  main µÎ¹øÂ° ÅÇ contents ¿µ¿ª*/
+/*  main ï¿½Î¹ï¿½Â° ï¿½ï¿½ contents ï¿½ï¿½ï¿½ï¿½*/
 .item2 {
 
     padding-bottom: 120px;
@@ -253,7 +254,7 @@ border: solid; border-color: blue;
 
 
 
-/* ÅÇ ¹öÆ° css*/
+/* ï¿½ï¿½ ï¿½ï¿½Æ° css*/
 #btnTab{
 
   border-radius: 5px;
@@ -270,7 +271,7 @@ border: solid; border-color: blue;
 
 
 
-/* ·Î±×ÀÎ¿µ¿ª*/
+/* ï¿½Î±ï¿½ï¿½Î¿ï¿½ï¿½ï¿½*/
 
 .prettyline {
   height: 5px;
@@ -288,7 +289,7 @@ border: solid; border-color: blue;
 
 
 
-/* ÅÇ contents ¿µ¿ª*/
+/* ï¿½ï¿½ contents ï¿½ï¿½ï¿½ï¿½*/
 
 .item {
 
