--- a/HappyRing/WebContent/css/main/main.css
+++ b/HappyRing/WebContent/css/main/main.css
@@ -77,7 +77,7 @@ border: solid; border-color: blue;
 
 .c-1{
 	border: solid; 
-	border-color: pink; height: 46px; padding-top: 1%;
+	border-color: pink; height: auto; padding-top: 1%;
 }
 
 .c-2{
