종상 - 메롱 없애는중

--- a/HappyRing/WebContent/css/community/freeList.css
+++ b/HappyRing/WebContent/css/community/freeList.css
@@ -1,9 +1,9 @@
 
-/* ´ñ±Û ¿µ¿ª */
+/* ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ */
 .reply td, .notice {
 	font-size: 13px;
 }
-/* °Ë»öÃ¢ ¼³Á¤ */
+/* ï¿½Ë»ï¿½Ã¢ ï¿½ï¿½ï¿½ï¿½ */
 .search-box {
 	min-height: 35px;
 }
@@ -16,17 +16,17 @@
 	padding-top: 2.5px;
 }
 
-/* ¿À¸¥ÂÊ ¿µ¿ª ¼³Á¤ */
+/* ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ */
 .side-area {
 	margin-top: 33px;
 }
 
-/* Ä«Å×°í¸®ÅÜ ¼³Á¤ */
+/* Ä«ï¿½×°ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ */
 .search-btn {
 	padding: 0 20px;
 }
 
-/* Å×ÀÌºí ¼³Á¤ */
+/* ï¿½ï¿½ï¿½Ìºï¿½ ï¿½ï¿½ï¿½ï¿½ */
 .table-list {
 	margin-top: 30px;
 }
@@ -45,4 +45,5 @@ th, td {
 
 #pageNum a, #write {
 	font-size: 12px;
+	
 }
