--- a/HappyRing/WebContent/css/main/mainFrame.css
+++ b/HappyRing/WebContent/css/main/mainFrame.css
@@ -71,6 +71,13 @@ border: solid; border-color: blue;
 	border: solid; border-color: black;
 }
 
+.b-1 button{
+	white-space: pre-wrap; 
+	border-radius: 4px; width: 100%;
+}
+
+
+
 .b-2{
 	border: solid; border-color: purple; margin-top: 25px;
 }
@@ -78,6 +85,13 @@ border: solid; border-color: blue;
 
 .b-2-row {
 	padding-left: 14px;  padding-right: 14px;
+}
+
+.b-2-row button {
+	white-space: pre-wrap; 
+	text-transform:  capitalize;
+	padding: 20px 5px 20px 6px;
+	font-size: 75%;
 }
 
 .b-2-row .btn-success{
@@ -95,6 +109,10 @@ border: solid; border-color: blue;
 .b-2-row .btn-danger{
 	border-radius: 0; height: 120px;
 }
+
+
+
+
 
 .b-3{
 	border: solid; border-color: babyblue; margin-top: 25px;
@@ -356,3 +374,16 @@ border: solid; border-color: blue;
     border-right-color: pink;
     border-radius: 0 0 26px 26px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
