challengeDetail 98% 완성_김하은

--- a/HappyRing/WebContent/css/challenge/challengeDetail.css
+++ b/HappyRing/WebContent/css/challenge/challengeDetail.css
@@ -298,10 +298,33 @@
 	padding-top: 25px;
 }
 
+/* 댓글 수정 삭제 버튼 */
+      .btn-circle {
+        width: 10px;
+        height: 10px;
+        text-align: center;
+        padding: 6px 0;
+        font-size: 12px;
+        line-height: 1.428571429;
+        border-radius: 15px;
+       
+        
+      }
+      .btn-circle.btn-lg {
+         width: 26px;
+    height: 26px;
+    padding: 17px 14px;
+    font-size: 13px;
+    line-height: 1.8;
+    border-radius: 25px;
+     padding-top: 0px;
+    padding-left: 5.4px;
+      }
+
 /*등록, 취소, 임시저장 버튼 */
 .cha_divPaging{
 	border: solid; 
-	border-color: pink;
+	border-color: green;
 	padding-top: 25px;
 }
 
