--- a/HappyRing/WebContent/css/book/recommendBookList.css
+++ b/HappyRing/WebContent/css/book/recommendBookList.css
@@ -9,3 +9,14 @@
 }
 
 
+.rb_1{
+	height: auto;padding-top: 25px; border: solid; border-color: pink;
+}
+
+.rb_2{
+	height: auto;padding-top: 25px; border: solid; border-color: pink;
+}
+
+.rb_3{
+	height: auto;padding-top: 25px; border: solid; border-color: pink;
+}
