--- a/HappyRing/WebContent/css/diary/diaryList.css
+++ b/HappyRing/WebContent/css/diary/diaryList.css
@@ -9,293 +9,239 @@
 }
 
 .diary_list{
-	padding-top: 25px;
+/* 	padding-top: 25px; */
 	border: solid;
 	border-color: green;
+	background: #dfebed;
+	font-family: 'Roboto', sans-serif;
 }
 
 
 
+/* 달력 CSS START **/
 
+/* * { */
+/*   box-sizing: border-box; */
+/*   font-family: 'Roboto', sans-serif; */
+/*   list-style: none; */
+/*   margin: 0; */
+/*   outline: none; */
+/*   padding: 0; */
+/* } */
 
-#container {
-  width: 800px;
-  padding: 60px;
-  margin: 0 auto;
+/* a { */
+/*   text-decoration: none; */
+/* } */
+
+/* body, html { */
+/*   height: 100%; */
+/* } */
+
+/* .cal{ */
+/* 	background: #dfebed; */
+/* 	font-family: 'Roboto', sans-serif; */
+/* 	height: 100% */
+/* } */
+
+.containerCal {
+	align-items: center;
+	display: flex;
+	height: 100%;
+	justify-content: center;
+	margin: 0 auto;
+	max-width: 880px;
+	width: 100%;
+}
+
+.calendar {
+	background: #2b4450;
+	border-radius: 4px;
+	box-shadow: 0 5px 20px rgba(0, 0, 0, .3);
+  perspective: 1000;
+	transition: .9s;
+	transform-style: preserve-3d;
+	width: 100%;
+	height: 711px;
+}
+
+/* Front - Calendar */
+.interval {
+	height: 80px;
+}
+.front {
+	transform: rotateY(0deg);
+}
+
+.current-date {
+	border-bottom: 1px solid rgba(73, 114, 133, .6);
+	display: flex;
+	justify-content: space-between;
+	padding: 30px 40px;
+}
+
+.current-date h1 {
+	color: #dfebed;
+	font-size: 1.4em;
+	font-weight: 300;
+}
+
+.week-days {
+	color: #dfebed;
+	display: flex;
+	justify-content: space-between;
+	font-weight: 600;
+	padding: 30px 40px;
+	font-size: 30px;
+}
+
+.days {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.weeks {
+	color: #fff;
+	display: flex;
+	flex-direction: column;
+	padding: 0 40px;
+}
+
+.weeks div {
+	display: flex;
+	font-size: 1.2em;
+	font-weight: 300;
+	justify-content: space-between;
+	margin-bottom: 20px;
+	width: 100%;
+}
+
+.last-month {
+	opacity: .3;
+}
+
+.weeks span {
+/* 	padding: 10px; */
+	height: 42%;
+    width: 4%;
+    padding-left: 6.5px;
+}
+
+.weeks span.active {
+	background: #f78536;
+	border-radius: 50%;
+}
+
+.weeks span:not(.last-month):hover {
+	cursor: pointer;
+	font-weight: 600;
+}
+
+.event {
+	position: relative;
+}
+
+.event:after {
+	content: '•';
+	color: #f78536;
+	font-size: 1.4em;
+	position: absolute;
+	right: -4px;
+	top: -4px;
+}
+
+/* Back - Event form */
+
+.back {
+	height: 100%;
+	transform: rotateY(180deg);
+}
+
+.back input {
+	background: none;
+	border: none;
+	border-bottom: 1px solid rgba(73, 114, 133, .6);
+	color: #dfebed;
+	font-size: 1.4em;
+	font-weight: 300;
+	padding: 30px 40px;
+	width: 100%;
+}
+
+.info {
+	color: #dfebed;
+	display: flex;
+	flex-direction: column;
+	font-weight: 600;
+	font-size: 1.2em;
+	padding: 30px 40px;
+}
+
+.info div:not(.observations) {
+	margin-bottom: 40px;
+}
+
+.info span {
+	font-weight: 300;
+}
+
+.info .date {
+	display: flex;
+	justify-content: space-between;
+}
+
+.info .date p {
+	width: 50%;
+}
+
+.info .address p {
+	width: 100%;
+}
+
+.showDiary {
+	bottom: 0;
+	border-top: 1px solid rgba(73, 114, 133, .6);
+	display: flex;
+	justify-content: space-between;
+	position: absolute;
+	width: 100%;
+}
+
+.showDiary button {
+	background: none;
+	border: 0;
+	color: #fff;
+	font-weight: 600;
+	letter-spacing: 3px;
+	margin: 0;
+	padding: 30px 0;
+	text-transform: uppercase;
+	width: 50%;
+}
+
+.showDiary button:first-of-type {
+	border-right: 1px solid rgba(73, 114, 133, .6);
+}
+
+.showDiary button:hover {
+	background: #497285;
+	cursor: pointer;
+}
+
+.showDiary button:active {
+	background: #5889a0;
+	outline: none;
+}
+
+/* Flip animation */
+
+.flip {
+	transform: rotateY(180deg);
+}
+
+.front, .back {
+	backface-visibility: hidden;
 }
 
 
-/*calendar*/
-
-#calendar {
-  width: 380px;
-  background: #ffffff;
-  border-radius: 5px;
-  overflow: hidden;
-  float: left;
-}
-
-.ui-datepicker {
-  margin: 30px 20px;
-  font-size: 22px;
-}
-
-.ui-datepicker a {
-  text-decoration: none;
-  color: #6a7883;
-}
-
-.ui-datepicker table {
-  width: 100%;
-}
-
-
-/*Styling the Header Section*/
-
-.ui-datepicker-header {
-  height: 60px;
-  border-bottom: 1px solid #c6cdd2;
-}
-
-.ui-datepicker-title {
-  font-size: 32px;
-  color: #e5eaee;
-  text-align: center;
-}
-
-.ui-datepicker-prev,
-.ui-datepicker-next {
-  width: 12px;
-  height: 12px;
-  text-indent: 9999px;
-  border-radius: 100%;
-  cursor: pointer;
-  overflow: hidden;
-  margin-top: -12px;
-}
-
-.ui-datepicker-prev {
-  float: left;
-  margin-left: 12px;
-}
-
-.ui-datepicker-prev:after {
-  transform: rotate(45deg);
-}
-
-.ui-datepicker-next {
-  float: right;
-  margin-right: 12px;
-}
-
-.ui-datepicker-next:after {
-  transform: rotate(-135deg);
-}
-
-.ui-datepicker-prev:after,
-.ui-datepicker-next:after {
-  content: '';
-  position: absolute;
-  display: block;
-  width: 12px;
-  height: 12px;
-  border-left: 3px solid #6a7883;
-  border-bottom: 3px solid #6a7883;
-}
-
-.ui-datepicker-calendar thead tr th span {
-  display: block;
-  width: 40px;
-  color: #bdc5cb;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 50px;
-}
-
-
-/*Styling the Dates*/
-
-.ui-state-default {
-  display: block;
-  color: #f26a63;
-  line-height: 40px;
-  text-align: center;
-  font-size: 16px;
-  width: 40px;
-}
-
-.ui-datepicker-other-month .ui-state-default {
-  color: #bdc5cb;
-}
-
-
-/*active day*/
-
-.ui-state-default:hover {
-  background: #6a7883;
-  color: #ffffff;
-  border: 1px solid #6a7883;
-  border-radius: 99px;
-  position: relative;
-  margin: -1px;
-}
-
-.ui-datepicker-calendar .ui-state-highlight {
-  color: #f26a63;
-  font-weight: bold;
-}
-
-.ui-datepicker-calendar .ui-state-active {
-  background: #6a7883;
-  color: #ffffff;
-  border: 1px solid #6a7883;
-  border-radius: 99px;
-  position: relative;
-  margin: -1px;
-}
-
-
-/*weather*/
-
-#weather {
-  width: 320px;
-  background: #ffffff;
-  border-radius: 5px;
-  overflow: hidden;
-  float: right;
-  padding: 20px;
-}
-
-#today {
-  margin: 0 auto;
-  width: 120px;
-}
-
-#temp {
-  font-size: 42px;
-  font-weight: 400;
-  color: #6a7883;
-  display: inline-block;
-}
-
-#icon {
-  font-size: 42px;
-  font-weight: 400;
-  color: #6a7883;
-  display: inline-block;
-  margin: 0 5px;
-  ;
-}
-
-#city {
-  font-size: 22px;
-  color: #bdc5cb;
-  text-align: center;
-  margin: 0;
-  line-height: 40px;
-  padding-bottom: 10px;
-}
-
-#week {
-  border-top: 1px solid #c6cdd2;
-  padding-top: 10px;
-}
-
-#weekdays {
-  font-size: 22px;
-  color: #bdc5cb;
-  margin: 0;
-  line-height: 40px;
-}
-
-.icons {
-  text-align: center;
-  font-size: 38px;
-  color: #6c7a85;
-}
-
-#forecast {
-  font-size: 22px;
-  color: #6c7a85;
-  margin: 0;
-  margin-top: 15px;
-}
-
-.gap {
-  display: inline-block;
-  width: 80px;
-  text-align: center;
-}
-
-
-/*music*/
-
-#music {
-  width: 360px;
-  background: #ffffff;
-  border-radius: 5px;
-  overflow: hidden;
-  float: right;
-  margin-top: 50px;
-}
-
-#music img {
-  width: 100%;
-}
-
-.title {
-  text-align: center;
-  line-height: 26px;
-  font-size: 14px;
-}
-
-#pause {
-  display: none;
-}
-
-progress[value] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  width: 100%;
-  height: 6px;
-}
-
-progress[value]::-webkit-progress-bar {
-  background-color: #f1faff;
-}
-
-progress[value]::-webkit-progress-value {
-  background-color: #9ad9fd;
-}
-
-.actions {
-  padding: 15px 20px;
-  overflow: hidden;
-}
-
-.actions i {
-  font-size: 18px;
-  color: #6a7883;
-  float: left;
-  cursor: pointer;
-}
-
-.prev {
-  margin-left: 97px;
-  float: left;
-}
-
-.play {
-  margin: 0 20px 0 20px;
-  float: left;
-}
-
-.next {
-  margin-right: 97px;
-  float: left;
-}
-
-#mute {
-  display: none;
-}
+/* 달력 CSS END **/
