video Board 작성중 - 85%완료- 김하은

--- a/HappyRing/WebContent/css/video/videoBoard.css
+++ b/HappyRing/WebContent/css/video/videoBoard.css
@@ -142,3 +142,17 @@
 
 
 /* 텍스트필드 css END **/
+
+
+
+
+
+/* video 넣는 CSS START **/
+#url1{
+  width: 500px;
+}
+#vid{
+/*   background: white; */
+  height: 415x;
+}
+/* video 넣는 CSS END **/
