종상 - main 디테일하게 작업중

--- a/HappyRing/WebContent/css/main/mainList.css
+++ b/HappyRing/WebContent/css/main/mainList.css
@@ -8,7 +8,7 @@
 
 
 /* */
-.contents-Border{
-	border: solid !important; 
-	border-color: #8080802b !important;
+.post-blog.contents-Border {
+	border: 1px solid #8080802b !important; 
+/* 	border-color: #8080802b !important; */
 }
