--- a/HappyRing/WebContent/css/main/mainFrame.css
+++ b/HappyRing/WebContent/css/main/mainFrame.css
@@ -6,7 +6,8 @@
 
 .aFrameDiv{
 	padding-left: 20px; padding-right: 20px; padding-top: 20px; 
-	padding-bottom: 20px; border: solid; border-color: red;
+	padding-bottom: 20px; 
+/* 	border: solid; border-color: red; */
 	
 }
 
@@ -66,12 +67,12 @@
 
 .bFrameDiv {
 padding-top: 20px; padding-bottom: 20px; margin-bottom: 100px;  
-border: solid; border-color: blue;
+/* border: solid; border-color: blue; */
 }
 
 
 .b-1{
-	border: solid; border-color: black;
+/* 	border: solid; border-color: black; */
 }
 
 .b-1 button{
@@ -82,7 +83,9 @@ border: solid; border-color: blue;
 
 
 .b-2{
-	border: solid; border-color: purple; margin-top: 25px;
+/* 	border: solid; border-color: purple; */
+
+margin-top: 25px; 
 }
 
 
