css 이름 바꿈 book~common

--- a/HappyRing/WebContent/css/theory/theoryQNAList.css
+++ b/HappyRing/WebContent/css/theory/theoryQNAList.css
@@ -71,11 +71,11 @@
     border-color: pink;
 }
 
-.qna_lanking{
-	border: solid; 
-	border-color: black;
-	padding-top: 25px;
-}
+/* .qna_lanking{ */
+/* 	border: solid;  */
+/* 	border-color: black; */
+/* 	padding-top: 25px; */
+/* } */
 
 
 
