--- a/HappyRing/WebContent/css/common/frame/frame.css
+++ b/HappyRing/WebContent/css/common/frame/frame.css
@@ -178,8 +178,8 @@ padding-top: 20px; padding-bottom: 20px; margin-bottom: 100px;
 
 .b-carouselBottom{
 	/* 영역 B : 광고 tab**/
-	border: solid; 
-	border-color: black;
+/* 	border: solid;  */
+/* 	border-color: black; */
 	margin-top: 25px;
 }
 
