--- a/HappyRing/WebContent/css/theory/theoryFrame.css
+++ b/HappyRing/WebContent/css/theory/theoryFrame.css
@@ -48,7 +48,8 @@ margin-left: 5px !important;
 
 .th_a2_2_list{
 	border: solid;
-    border-color: #8080804a;
+/*     border-color: #8080804a; */
+    border-color: #d2d4df4d;
 }
 .th_a2_2_imgTitle{
 /*    padding-top: 12px; */
