--- a/HappyRing/WebContent/css/info/info.css
+++ b/HappyRing/WebContent/css/info/info.css
@@ -52,3 +52,13 @@
 /*     padding-left: 5.4px; */
 /*       } */
 
+
+
+.th_a2_2_imgTitle .post-blog-image .img-test{
+	min-height: 124px !important;
+	width: auto !important;
+}
+
+
+
+
