--- a/HappyRing/WebContent/css/common/frame/frame.css
+++ b/HappyRing/WebContent/css/common/frame/frame.css
@@ -164,6 +164,19 @@ padding-top: 20px; padding-bottom: 20px; margin-bottom: 100px;
 	background-color: white;
 }
 
+.b-3 .notice a {
+	min-width: 25px !important;
+	height: 25px !important;
+	padding: 0px;
+	padding-left: 2px;
+	padding-bottom: 2px;
+	float: right;
+	margin: 5px;
+}
+.b-3 .notice a span {
+	top: -1px;
+}
+
 
 .b-4{
 /* 	border: solid; border-color: pink;  */
