--- a/HappyRing/WebContent/css/common/frame/frame.css
+++ b/HappyRing/WebContent/css/common/frame/frame.css
@@ -60,11 +60,33 @@
     margin-top: 15px;
 }
 
+/* .a-2b-col{ */
+/* 	border: solid; */
+/*     border-color: red; */
+/*     width: 110px; */
+/*     padding-right: 0px; */
+/*     padding-left: 0px; */
+	
+/* } */
 
 .a-2b .btn  {
-	width: 115px;
-	
+	width: 110px;
 }
+
+/* .a-2b .show-tick { */
+/* 	width: 110px; */
+	
+/* } */
+
+
+
+.bootstrap-select.btn-group .dropdown-menu {
+	
+	min-width: 65%
+	}
+
+
+
 
 .a-2c{
     height: auto;
