종상 - videoList 리스트 및 b영역 오류 해결

--- a/HappyRing/WebContent/css/video/videoList.css
+++ b/HappyRing/WebContent/css/video/videoList.css
@@ -2,7 +2,7 @@
 
 /* 공간 구분자 */
 .v_1{
-	height: auto;padding-top: 25px; border: solid; border-color: blue;
+/* 	height: auto;padding-top: 25px; border: solid; border-color: blue; */
 }
 
 .v_2{
