--- a/HappyRing/WebContent/css/common/frame/frame.css
+++ b/HappyRing/WebContent/css/common/frame/frame.css
@@ -48,6 +48,7 @@
 	
 }
 
+
 .a-2b{
 	
 	 height: auto;
@@ -98,6 +99,22 @@
     background-color: white;
     margin-top: 15px;
 }
+
+
+
+/* a-new2c : 커뮤니티 게시판에서 사용함, a-2에서 마진만 조금 다름 */
+.a-new2c{
+ height: auto;
+	padding-top: 1px;
+/* 	border: solid;  */
+/* 	border-color: skyblue; */
+	padding-left: 15px;
+    padding-right: 15px;
+    background-color: white;
+    margin-top: 10px;
+}
+
+
 
 .a-3{
 	height: auto;padding-top: 25px; border: solid; border-color: purple;
@@ -335,7 +352,7 @@ padding-top: 20px; padding-bottom: 20px; margin-bottom: 100px;
 
 .bottomSearch{
 	background-color: white;
-    margin-top: 3px;
+/*     margin-top: 3px; */
     padding-top: 11px;
     padding-bottom: 14px;
     padding-left: 18px;
