--- a/HappyRing/WebContent/css/diary/diaryList.css
+++ b/HappyRing/WebContent/css/diary/diaryList.css
@@ -9,11 +9,12 @@
 }
 
 .diary_list{
-/* 	padding-top: 25px; */
-	border: solid;
-	border-color: green;
-	background: #dfebed;
-	font-family: 'Roboto', sans-serif;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    /* border: solid; */
+    /* border-color: green; */
+    /* background: #dfebed; */
+    font-family: 'Roboto', sans-serif;
 }
 
 
