자유게시판 리스트

--- a/HappyRing/WebContent/css/common/frame/frame.css
+++ b/HappyRing/WebContent/css/common/frame/frame.css
@@ -259,6 +259,13 @@ padding-top: 20px; padding-bottom: 20px; margin-bottom: 100px;
 	padding-top: 25px;
 }
 
+
+.b-comment{
+/*     border: solid;  */
+/* 	border-color: black; */
+	padding-top: 25px;
+}
+
 /* frmae B 끝 */
 
 /* ############### frmae C 시작 */
