--- a/HappyRing/WebContent/css/community/commonEditor.css
+++ b/HappyRing/WebContent/css/community/commonEditor.css
@@ -22,3 +22,38 @@
 @import url(//fonts.googleapis.com/earlyaccess/jejuhallasan.css);
 
 @import url(//fonts.googleapis.com/earlyaccess/nanumgothiccoding.css);
+
+
+
+
+
+
+.panel-heading .note-btn {
+	width: auto !important;
+	height: auto !important;
+	padding: 7px 8px 7px 10px !important;
+	font-size: 10px;
+}
+
+.note-current-fontname{
+	font-size: 14px;
+}
+.note-current-fontsize {
+	font-size: 12px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
