심리이론 디테일

--- a/HappyRing/WebContent/css/common/frame/frame.css
+++ b/HappyRing/WebContent/css/common/frame/frame.css
@@ -420,6 +420,10 @@ padding-top: 20px; padding-bottom: 20px; margin-bottom: 100px;
 	top: 47px !important;
 }
 
+.content-inline-icon{
+	height: 40px !improtant;
+	width: 40px  !improtant;
+}
 
 
 
