--- a/HappyRing/WebContent/css/theory/theoryDetail.css
+++ b/HappyRing/WebContent/css/theory/theoryDetail.css
@@ -67,3 +67,105 @@
 	border-color : yellow;
 	padding-top: 25px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+  Modulr.css
+  ---------------------
+  @desc: Modular CSS Framework
+  @author: Decorator.io
+  @twitter: https://www.twitter.com/_uloga
+  @source: http://www.decorator.io/modulr
+\--------------------------------------------*/
+
+/* __ extra edits __ */
+
+.shadow{
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,.2);
+}
+.thumbnail img{
+  float: left;
+  width: 100%;
+  border: 1px solid #ddd;
+}
+.before{
+  border: 1px solid #009688;
+}
+
+
+.filter .label{
+  float: left;
+  margin-top: 13px;
+  margin-right: 5px;
+}
+@media (max-width: 800px){
+  .after:after {
+    border-bottom: none;
+    border-left: 1px solid #009688;
+    height: 50px;
+    top: -20px;
+    left: 50%;
+    width: 2px;
+    z-index: -1;
+  }
+}
+
+.row.flex.margin-bottom {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+.reply {
+	display: none !important;
+}
+
+.row.padding-top-20, .row.shadow.padding-15.white, .row.padding-top-15 {
+	margin-left: 0;
+}
+
+.comment-box {
+  font-size: 0.75em;
+  background: #88b027;
+  color: #FFF;
+  position: absolute;
+  padding: 7px 13px 7px;
+}
+
+.comment-box:before {
+    position: absolute;
+    content: " ";
+    color: #FFF;
+    border-style: solid;
+    border-color: #88b027 transparent transparent #88b027;
+    border-width: 4px;
+    bottom: -8px;
+    left: 7px;
+ }
