--- a/HappyRing/WebContent/css/common/frame/frame.css
+++ b/HappyRing/WebContent/css/common/frame/frame.css
@@ -391,10 +391,6 @@ padding-top: 20px; padding-bottom: 20px; margin-bottom: 100px;
 
 /* 심리학지식 > detial */
 
-.article-top {
-	margin-top: 95px;
-}
-
 .content-detail {
 	height: auto;
 	padding-top: 25px; 
@@ -408,35 +404,22 @@ padding-top: 20px; padding-bottom: 20px; margin-bottom: 100px;
 }
 
 .content-inline-border{
-/*    padding-top: 60px;  */
-   padding-bottom: 8px; 
+   padding-top: 60px; 
+   padding-bottom: 85px; 
    border: solid;
-   border-color: #f2f3f9;
    
 }
 .content-inline-buttons{
-/*     border: solid; */
-/* 	border-color : #800040; */
-	padding-top: 135px;
+    border: solid;
+	border-color : #800040;
+	padding-top: 157px;
 	
 }
 
-.content-inline-icon{
-	top: 47px !important;
-}
 
-.content-inline-icon{
-	height: 40px !improtant;
-	width: 40px  !improtant;
-}
 
-.commentArea{
-	border: solid; 
-	border-color: pink;
-	padding-top: 25px;
-	background-color: white;
-	
-}
+
+
 
 
 
