--- a/HappyRing/.settings/org.eclipse.wst.common.component
+++ b/HappyRing/.settings/org.eclipse.wst.common.component
@@ -3,7 +3,7 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="HappyRing"/>
         <property name="java-output-path" value="/HappyRing/build/classes"/>
+        <property name="context-root" value="HappyRing_before"/>
     </wb-module>
 </project-modules>
